@@ -1,4 +1,4 @@
-// Generated by Flexc++ V2.04.00 on Wed, 16 Mar 2016 11:12:44 +0100
+// Generated by Flexc++ V2.04.00 on Wed, 16 Mar 2016 19:05:37 +0100
 
 #include <iostream>
 #include <fstream>
@@ -2042,8 +2042,8 @@ int const ScannerBase::s_dfa__[][71] =
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,    18, -1},  // 33
     // typespec
-    { 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1,
-          1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1,
+    { 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 3,
+          1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 4, 1, 1, 1, 1, 1,
           1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
           1, 1, 1, 1, 1, 1, 1, 1,-1,    -1, -1},  // 0
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
@@ -2053,15 +2053,44 @@ int const ScannerBase::s_dfa__[][71] =
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,    94, -1},  // 2
-    { 4, 4,-1, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,
-          4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,
-          4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,
-          4, 4, 4, 4, 4, 4, 4, 4,-1,    93, -1},  // 3
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,    96, -1},  // 2
+    {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 5,-1,-1,-1, 6,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,    93, -1},  // 3
+    { 7, 7,-1, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7,
+          7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7,
+          7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7,
+          7, 7, 7, 7, 7, 7, 7, 7,-1,    93, -1},  // 4
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,    92, -1},  // 4
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,    95, -1},  // 5
+    { 6, 6,-1, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6,
+          6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6,
+          6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6,
+          6, 6, 6, 6, 6, 6, 6, 6,-1,    94, -1},  // 6
+    {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,    92, -1},  // 7
+    // typecomment
+    { 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1,-1,    -1, -1},  // 0
+    {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,    97, -1},  // 1
+    {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 3,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,    97, -1},  // 2
+    {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,    98, -1},  // 3
 };
 
 
@@ -2077,6 +2106,7 @@ int const (*ScannerBase::s_dfaBase__[])[71] =
     s_dfa__ + 444,
     s_dfa__ + 464,
     s_dfa__ + 498,
+    s_dfa__ + 506,
 };
 
 size_t ScannerBase::s_istreamNr = 0;
@@ -2484,7 +2514,7 @@ try
         // $insert actions
         case 0:
         {
-#line 22 "lexer"
+#line 23 "lexer"
             {
                 
                 d_block.open(lineNr(), filename()); 
@@ -2494,7 +2524,7 @@ try
         break;
         case 1:
         {
-#line 32 "lexer"
+#line 33 "lexer"
             {
                 if (d_block)
                 d_block += " ";
@@ -2503,7 +2533,7 @@ try
         break;
         case 2:
         {
-#line 37 "lexer"
+#line 38 "lexer"
             {
                 setLineNrs();
                 if (d_block)
@@ -2513,7 +2543,7 @@ try
         break;
         case 4:
         {
-#line 48 "lexer"
+#line 49 "lexer"
             {
                 d_commentChar[0] = ' ';
                 begin(StartCondition__::comment);
@@ -2522,13 +2552,13 @@ try
         break;
         case 5:
         {
-#line 59 "lexer"
+#line 60 "lexer"
             rawString();
         }
         break;
         case 6:
         {
-#line 61 "lexer"
+#line 62 "lexer"
             {
                 if (d_block.close())
                 {
@@ -2540,7 +2570,7 @@ try
         break;
         case 7:
         {
-#line 69 "lexer"
+#line 70 "lexer"
             {
                 begin(StartCondition__::string);
                 
@@ -2550,7 +2580,7 @@ try
         break;
         case 8:
         {
-#line 75 "lexer"
+#line 76 "lexer"
             {
                 begin(StartCondition__::quote);
                 
@@ -2561,57 +2591,57 @@ try
         case 9:
         case 10:
         {
-#line 82 "lexer"
+#line 83 "lexer"
             d_block.dollar(lineNr(), d_matched, false);
         }
         break;
         case 11:
         {
-#line 84 "lexer"
+#line 85 "lexer"
             d_block.dollar(lineNr(), d_matched, true);
         }
         break;
         case 12:
         {
-#line 86 "lexer"
+#line 87 "lexer"
             d_block.atIndex(lineNr(), d_matched);
         }
         break;
         case 13:
         {
-#line 88 "lexer"
+#line 89 "lexer"
             d_block.dollarIndex(lineNr(), d_matched, false);
         }
         break;
         case 14:
         {
-#line 90 "lexer"
+#line 91 "lexer"
             d_block.dollarIndex(lineNr(), d_matched, true);
         }
         break;
         case 15:
         case 16:
         {
-#line 93 "lexer"
+#line 94 "lexer"
             d_block.IDdollar(lineNr(), d_matched);
         }
         break;
         case 17:
         case 18:
         {
-#line 96 "lexer"
+#line 97 "lexer"
             d_block.IDindex(lineNr(), d_matched);
         }
         break;
         case 19:
         {
-#line 98 "lexer"
+#line 99 "lexer"
             d_block(d_matched);
         }
         break;
         case 20:
         {
-#line 101 "lexer"
+#line 102 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::BASECLASS_HEADER;
@@ -2620,7 +2650,7 @@ try
         break;
         case 21:
         {
-#line 105 "lexer"
+#line 106 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::BASECLASS_PREINCLUDE;
@@ -2629,7 +2659,7 @@ try
         break;
         case 22:
         {
-#line 109 "lexer"
+#line 110 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::CLASS_HEADER;
@@ -2638,31 +2668,31 @@ try
         break;
         case 23:
         {
-#line 113 "lexer"
+#line 114 "lexer"
             return Parser::CLASS_NAME;
         }
         break;
         case 24:
         {
-#line 114 "lexer"
+#line 115 "lexer"
             return Parser::DEBUGFLAG;
         }
         break;
         case 25:
         {
-#line 115 "lexer"
+#line 116 "lexer"
             return Parser::ERROR_VERBOSE;
         }
         break;
         case 26:
         {
-#line 116 "lexer"
+#line 117 "lexer"
             return Parser::EXPECT;
         }
         break;
         case 27:
         {
-#line 117 "lexer"
+#line 118 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::FILENAMES;
@@ -2671,13 +2701,13 @@ try
         break;
         case 28:
         {
-#line 121 "lexer"
+#line 122 "lexer"
             return Parser::FLEX;
         }
         break;
         case 29:
         {
-#line 122 "lexer"
+#line 123 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::IMPLEMENTATION_HEADER;
@@ -2686,7 +2716,7 @@ try
         break;
         case 30:
         {
-#line 126 "lexer"
+#line 127 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 d_include = true;
@@ -2695,25 +2725,25 @@ try
         break;
         case 31:
         {
-#line 130 "lexer"
+#line 131 "lexer"
             return Parser::LEFT;
         }
         break;
         case 32:
         {
-#line 131 "lexer"
+#line 132 "lexer"
             return Parser::LOCATIONSTRUCT;
         }
         break;
         case 33:
         {
-#line 132 "lexer"
+#line 133 "lexer"
             return Parser::LSP_NEEDED;
         }
         break;
         case 34:
         {
-#line 133 "lexer"
+#line 134 "lexer"
             {
                 begin(StartCondition__::xstring);
                 return Parser::LTYPE;
@@ -2722,43 +2752,43 @@ try
         break;
         case 35:
         {
-#line 137 "lexer"
+#line 138 "lexer"
             return Parser::NAMESPACE;
         }
         break;
         case 36:
         {
-#line 138 "lexer"
+#line 139 "lexer"
             return Parser::NEG_DOLLAR;
         }
         break;
         case 37:
         {
-#line 139 "lexer"
+#line 140 "lexer"
             return Parser::NOLINES;
         }
         break;
         case 38:
         {
-#line 140 "lexer"
+#line 141 "lexer"
             return Parser::NODEFAULT_ACTIONS;
         }
         break;
         case 39:
         {
-#line 141 "lexer"
+#line 142 "lexer"
             return Parser::NODEFAULT_CONS;
         }
         break;
         case 40:
         {
-#line 142 "lexer"
+#line 143 "lexer"
             return Parser::NONASSOC;
         }
         break;
         case 41:
         {
-#line 143 "lexer"
+#line 144 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::PARSEFUN_SOURCE;
@@ -2767,37 +2797,37 @@ try
         break;
         case 42:
         {
-#line 147 "lexer"
+#line 148 "lexer"
             return Parser::POLYMORPHIC;
         }
         break;
         case 43:
         {
-#line 148 "lexer"
+#line 149 "lexer"
             return Parser::PREC;
         }
         break;
         case 44:
         {
-#line 149 "lexer"
+#line 150 "lexer"
             return Parser::PRINT_TOKENS;
         }
         break;
         case 45:
         {
-#line 150 "lexer"
+#line 151 "lexer"
             return Parser::REQUIRED;
         }
         break;
         case 46:
         {
-#line 151 "lexer"
+#line 152 "lexer"
             return Parser::RIGHT;
         }
         break;
         case 47:
         {
-#line 152 "lexer"
+#line 153 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::SCANNER;
@@ -2806,7 +2836,7 @@ try
         break;
         case 48:
         {
-#line 156 "lexer"
+#line 157 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::SCANNER_CLASS_NAME;
@@ -2815,7 +2845,7 @@ try
         break;
         case 49:
         {
-#line 160 "lexer"
+#line 161 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::SCANNER_TOKEN_FUNCTION;
@@ -2824,7 +2854,7 @@ try
         break;
         case 50:
         {
-#line 164 "lexer"
+#line 165 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return 
@@ -2834,13 +2864,13 @@ try
         break;
         case 51:
         {
-#line 169 "lexer"
+#line 170 "lexer"
             return Parser::START;
         }
         break;
         case 52:
         {
-#line 170 "lexer"
+#line 171 "lexer"
             {
                 begin(StartCondition__::xstring);
                 return Parser::STYPE;
@@ -2849,7 +2879,7 @@ try
         break;
         case 53:
         {
-#line 174 "lexer"
+#line 175 "lexer"
             {
                 begin(StartCondition__::pxstring);
                 return Parser::TARGET_DIRECTORY;
@@ -2858,43 +2888,43 @@ try
         break;
         case 54:
         {
-#line 178 "lexer"
+#line 179 "lexer"
             return Parser::TOKEN;
         }
         break;
         case 55:
         {
-#line 179 "lexer"
+#line 180 "lexer"
             return Parser::TYPE;
         }
         break;
         case 56:
         {
-#line 180 "lexer"
+#line 181 "lexer"
             return Parser::UNION;
         }
         break;
         case 57:
         {
-#line 181 "lexer"
+#line 182 "lexer"
             return Parser::WARN_TAGS;
         }
         break;
         case 58:
         {
-#line 182 "lexer"
+#line 183 "lexer"
             return Parser::WEAK_TAGS;
         }
         break;
         case 59:
         {
-#line 183 "lexer"
+#line 184 "lexer"
             return Parser::TWO_PERCENTS;
         }
         break;
         case 60:
         {
-#line 185 "lexer"
+#line 186 "lexer"
             {
                 begin(StartCondition__::quote);
                 more();
@@ -2903,7 +2933,7 @@ try
         break;
         case 61:
         {
-#line 190 "lexer"
+#line 191 "lexer"
             {
                 begin(StartCondition__::string);
                 more();
@@ -2912,13 +2942,13 @@ try
         break;
         case 62:
         {
-#line 195 "lexer"
+#line 196 "lexer"
             return Parser::IDENTIFIER;
         }
         break;
         case 63:
         {
-#line 197 "lexer"
+#line 198 "lexer"
             {
                 d_number = stoul(d_matched);
                 return Parser::NUMBER;
@@ -2927,13 +2957,13 @@ try
         break;
         case 64:
         {
-#line 202 "lexer"
+#line 203 "lexer"
             return d_matched[0];
         }
         break;
         case 65:
         {
-#line 207 "lexer"
+#line 208 "lexer"
             {
                 more();
                 begin(StartCondition__::string);
@@ -2942,7 +2972,7 @@ try
         break;
         case 66:
         {
-#line 211 "lexer"
+#line 212 "lexer"
             {
                 more();
                 begin(StartCondition__::pstring);
@@ -2951,7 +2981,7 @@ try
         break;
         case 67:
         {
-#line 215 "lexer"
+#line 216 "lexer"
             {
                 accept(0);
                 begin(StartCondition__::xstring);
@@ -2960,13 +2990,13 @@ try
         break;
         case 68:
         {
-#line 219 "lexer"
+#line 220 "lexer"
             return eoln();
         }
         break;
         case 69:
         {
-#line 225 "lexer"
+#line 226 "lexer"
             {
                 if (handleXstring(0))
                 return Parser::STRING;
@@ -2976,19 +3006,19 @@ try
         case 70:
         case 71:
         {
-#line 230 "lexer"
+#line 231 "lexer"
             more();
         }
         break;
         case 72:
         {
-#line 231 "lexer"
+#line 232 "lexer"
             return eoln();
         }
         break;
         case 73:
         {
-#line 236 "lexer"
+#line 237 "lexer"
             {
                 if (handleXstring(0))
                 return Parser::STRING;
@@ -2998,19 +3028,19 @@ try
         case 74:
         case 75:
         {
-#line 241 "lexer"
+#line 242 "lexer"
             more();
         }
         break;
         case 76:
         {
-#line 242 "lexer"
+#line 243 "lexer"
             return eoln();
         }
         break;
         case 77:
         {
-#line 248 "lexer"
+#line 249 "lexer"
             {
                 if (handleXstring(1))
                 return Parser::STRING;
@@ -3020,7 +3050,7 @@ try
         case 78:
         case 79:
         {
-#line 254 "lexer"
+#line 255 "lexer"
             {
                 if (handleXstring(2))
                 return Parser::STRING;
@@ -3029,25 +3059,25 @@ try
         break;
         case 80:
         {
-#line 259 "lexer"
+#line 260 "lexer"
             more();
         }
         break;
         case 81:
         {
-#line 263 "lexer"
+#line 264 "lexer"
             checkEndOfRawString();
         }
         break;
         case 82:
         {
-#line 265 "lexer"
+#line 266 "lexer"
             more();
         }
         break;
         case 84:
         {
-#line 270 "lexer"
+#line 271 "lexer"
             {
                 setLineNrs();
                 d_commentChar[0] = '\n';
@@ -3056,7 +3086,7 @@ try
         break;
         case 85:
         {
-#line 274 "lexer"
+#line 275 "lexer"
             {
                 if (!d_block)
                 begin(StartCondition__::INITIAL);
@@ -3070,19 +3100,19 @@ try
         break;
         case 86:
         {
-#line 289 "lexer"
+#line 290 "lexer"
             returnQuoted(&Scanner::octal);
         }
         break;
         case 87:
         {
-#line 291 "lexer"
+#line 292 "lexer"
             returnQuoted(&Scanner::hexadecimal);
         }
         break;
         case 88:
         {
-#line 293 "lexer"
+#line 294 "lexer"
             {
                 if (d_block(d_matched))
                 begin(StartCondition__::block);
@@ -3097,33 +3127,45 @@ try
         break;
         case 89:
         {
-#line 304 "lexer"
+#line 305 "lexer"
             returnQuoted(&Scanner::matched2);
         }
         break;
         case 90:
         {
-#line 306 "lexer"
+#line 307 "lexer"
             returnQuoted(&Scanner::matched1);
         }
         break;
         case 91:
         {
-#line 308 "lexer"
+#line 309 "lexer"
             returnQuoted(&Scanner::multiCharQuote);
         }
         break;
         case 92:
         case 93:
         {
-#line 317 "lexer"
+#line 318 "lexer"
             more();
         }
         break;
-        case 94:
+        case 95:
         {
-#line 319 "lexer"
+#line 322 "lexer"
+            begin(StartCondition__::typecomment);
+        }
+        break;
+        case 96:
+        {
+#line 324 "lexer"
             returnTypeSpec();
+        }
+        break;
+        case 98:
+        {
+#line 329 "lexer"
+            begin(StartCondition__::typespec);
         }
         break;
     }
