@@ -1,4 +1,4 @@
-// Generated by Flexc++ V2.04.00 on Wed, 16 Mar 2016 11:12:44 +0100
+// Generated by Flexc++ V2.04.00 on Wed, 16 Mar 2016 19:05:37 +0100
 
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
@@ -63,6 +63,7 @@ public:
         quote,
         block,
         typespec,
+        typecomment,
     };
 
 private:
@@ -177,7 +178,7 @@ protected:
     enum: size_t {
         s_rangeOfEOF__           = 68,
         s_finIdx__               = 69,
-        s_nRules__               = 95,
+        s_nRules__               = 99,
         s_maxSizeofStreamStack__ = 10
     };
     static size_t  const s_ranges__[];
